fixed xiaomi account

--- a/login_page.html
+++ b/login_page.html
@@ -12,7 +12,7 @@
     <a href="./mother_page.html"><img src="./Image/icons8-xiaomi-96.png" alt=""></a>
     <h2>Xiaomi Account</h2>
     <form action="">
-        <div>
+        <div class="account">
             <h1>Sign in</h1>
             <label for=""></label>
             <input type="text" placeholder="USERNAME" required>
